--- a/style.css
+++ b/style.css
@@ -51,8 +51,9 @@
     box-sizing: border-box;
     font-weight: bold;
     border-style: solid;
-    border: 1px;
     border-color: green;
+    border-width: 1px;
+
 }
 
 #main-title {
