Added touch action to prevent double tap zoom
Without touch action, double pressing causes zoom to be enabled.

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ section {
 #keyboard-container {
     width: 100%;
     text-align: center;
+    touch-action: manipulation;
 }
 
 #hack-button-container {
