--- a/style.css
+++ b/style.css
@@ -98,12 +98,14 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    touch-action: manipulation;
 }
 
 .key-row {
     display: flex;
     width: 100%;
     margin: 0 auto 8px;
+    touch-action: manipulation;
 }
 
 #keyboard {
